--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-router": "^6.11.2",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1"
   },
   "scripts": {
